--- a/luci-theme-infinityfreedom/files/htdocs/css/style.css
+++ b/luci-theme-infinityfreedom/files/htdocs/css/style.css
@@ -23,17 +23,24 @@
 /*
  *  Font generate by Icomoon<icomoon.io>
  */
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: 5px;
   height: 5px;
 }
-::-webkit-scrollbar-thumb{
-  border-radius: 1em;
-  background-color: rgba(50,50,50,.3);
+
+::-webkit-scrollbar-track {
+  /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
+  border-radius: 10px;
+  width: 10px;
 }
-::-webkit-scrollbar-track{
-  border-radius: 1em;
-  background-color: rgba(50,50,50,.1);
+
+::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background: #bbb;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+::-webkit-scrollbar-thumb:window-inactive {
+  background: #eee;
 }
 
 @font-face {
@@ -139,14 +146,12 @@ html, body {
     font-size:10pt;
     line-height: 150%;
     color:#ffffff;
-    /*min-width: 960px;*/
 	background: url('../images/main_bg.jpg');
 	background-repeat:no-repeat;
     background-attachment:fixed;
     background-position:center;
 	/* For FireFox */
-	scrollbar-color: rgba(50,50,50,.3) rgba(50,50,50,.1);
-	scrollbar-width: thin;
+	scrollbar-color: rgba(238,238,238,.5) rgba(50,50,50,.3);
 }
 
 body div {
@@ -339,8 +344,8 @@ footer > a {
 	box-shadow: 0 0 2rem 0 rgba(136, 152, 170, .15);
 	overflow-x: auto;
 	position: fixed;
-	
-	scrollbar-color: rgba(50,50,50,.3) rgba(50,50,50,.1);
+	/*
+	scrollbar-color: rgba(50,50,50,.3) rgba(50,50,50,.1);*/
 	scrollbar-width: thin;
 }
 
@@ -789,12 +794,11 @@ fieldset {
     font-family: inherit;
 
     min-width: inherit;
-    /* overflow-x: hidden; */
     overflow-x: auto;
     overflow-y: hidden;
 
     border-radius: 0;
-    /*background-color: #FFF;*/
+
     box-shadow: 0 1px 1px rgba(0,0,0,.05);
     border-radius: 4px;
     -webkit-overflow-scrolling: touch;
@@ -810,6 +814,8 @@ fieldset {
     font-size: 1.2rem;
     margin-bottom: 1.25rem;
     position: relative;
+	/* For Firefox */
+	scrollbar-width: thin;
 }
 
 .cbi-map-descr + fieldset {
