--- a/luci-theme-infinityfreedom/files/htdocs/css/style.css
+++ b/luci-theme-infinityfreedom/files/htdocs/css/style.css
@@ -30,17 +30,29 @@
 
 ::-webkit-scrollbar-track {
   /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
-  border-radius: 10px;
-  width: 10px;
+  background: rgba(50,50,50,.65);
+  border-radius: 2px;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 2px;
-  background: #bbb;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+  background: rgba(238,238,238,.5);
+  /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);*/
 }
 ::-webkit-scrollbar-thumb:window-inactive {
   background: #eee;
+}
+
+body::-webkit-scrollbar-track {
+  /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
+  background: rgba(50,50,50,1);
+  border-radius: 2px;
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background: rgba(238,238,238,.85);
+  /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);*/
 }
 
 @font-face {
@@ -961,6 +973,7 @@ td > table > tbody > tr > td,
     white-space: nowrap;
     will-change: background,border,color,opacity;
     -webkit-appearance: none;
+	margin-top:-3px;
 }
 
 .cbi-button-fieldadd {
@@ -1034,7 +1047,6 @@ form.inline + form.inline,
 .cbi-button-find,
 .cbi-input-reload,
 .cbi-button-reload {
-	margin-top:-3px;
     color: #fff !important;
     background-color: #81c784 !important;
     border-color: #81c784 !important;
