--- a/luci-theme-infinityfreedom/files/htdocs/css/style.css
+++ b/luci-theme-infinityfreedom/files/htdocs/css/style.css
@@ -148,20 +148,23 @@ body::-webkit-scrollbar-thumb {
 html {
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
+	font-size:10pt;
+	margin: 0px;
+    padding: 0px;
 }
 
-html, body {
+body {
     margin: 0px;
     padding: 0px;
     height: 100%;
     font-family: Roboto,'Hiragino Sans GB W6','Microsoft Yahei' !important;
-    font-size:10pt;
     line-height: 150%;
     color:#ffffff;
 	background: url('../images/main_bg.jpg');
 	background-repeat:no-repeat;
     background-attachment:fixed;
     background-position:center;
+	background-color:#07223e;
 	/* For FireFox window */
 	scrollbar-color: rgba(238,238,238,.5) rgba(50,50,50,1);
 	scrollbar-width: thin;
@@ -246,6 +249,10 @@ header {
     float: left;
     position: fixed;
     z-index: 2000;
+}
+
+body > header > div > a.brandWithBackground {
+	background: url("/luci-static/infinityfreedom/images/brand.png") 50% 50% / 171px 50px no-repeat rgba(7, 34, 62, 0.8);
 }
 
 footer {
@@ -2037,7 +2044,6 @@ body.lang_pl.node-main-login .cbi-value-title {
     width: 12rem;
 }
 
-
 @media screen and (max-width: 1600px) {
     .main-left {
         /*width: calc(0% + 15rem);*/
@@ -2131,13 +2137,21 @@ body.lang_pl.node-main-login .cbi-value-title {
 }
 
 @media screen and (max-width: 992px) {
-
+	
+	body > header > div > a.brandWithBackground {
+		background: url("/luci-static/infinityfreedom/images/brand.png") 50% 50% / 126px 37px no-repeat rgba(7, 34, 62, 0.8);
+	}
+	
+	html{
+		font-size:8pt;
+	}
+	
     header {
         height: 3.5rem;
     }
 
     header > .container > .brand {
-        font-size: 18px;
+        font-size: 1.1rem;
         height: 3.5rem;
         line-height: 3.5rem;
         width: calc(0% + 15rem);
@@ -2395,4 +2409,48 @@ body.lang_pl.node-main-login .cbi-value-title {
 		background-attachment:fixed;
 		background-position:center;
 	}
+}
+
+/* ----------- iPad Pro ----------- */
+/* Portrait and Landscape */
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (-webkit-min-device-pixel-ratio: 2) {
+	body {
+		background-image: none;
+	}
+	
+	body:after{
+      content:"";
+      position:fixed; /* stretch a fixed position to the whole screen */
+      top:0;
+      height:100vh; /* fix for mobile browser address bar appearing disappearing */
+      left:0;
+      right:0;
+      z-index:-1; /* needed to keep in the background */
+      background: url('../images/main_bg.jpg') center center;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+	}
+}
+
+/* Portrait */
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+}
+
+/* Landscape */
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 2) {
+
 }
