--- a/luci-theme-infinityfreedom/files/htdocs/css/style.css
+++ b/luci-theme-infinityfreedom/files/htdocs/css/style.css
@@ -1892,7 +1892,8 @@ header > .container > .pull-right > * {
     background-color: rgba(255, 255, 255, 0.2);
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .16), 0 0 2px 0 rgba(0, 0, 0, .12);
     text-align: left;
-
+	position: absolute;
+	top: calc(50vh - 16rem);
 }
 
 .node-main-login > .main form > div:nth-last-child(1) {
