--- a/luci-theme-infinityfreedom/files/htdocs/css/style.css
+++ b/luci-theme-infinityfreedom/files/htdocs/css/style.css
@@ -1174,7 +1174,7 @@ form.inline + form.inline,
 }
 
 .cbi-value-helpicon:before {
-    content: "\f059";
+    content: "\ea09";
 }
 
 .cbi-value-description {
